# jucestarter

./: AGENTS.md  CHANGELOG.md  CMakeLists.txt  README-Autodocs.md  README.md  build.ps1  build.sh
.github/agents/: audio-dev.agent.md
.github/instructions/: cmake.instructions.md  juce-cpp.instructions.md
.github/prompts/: build.prompt.md  extend-agent.prompt.md
.github/skills/add-dsp/: SKILL.md
.github/skills/add-parameter/: SKILL.md
.github/skills/extend-agent/: SKILL.md
.github/skills/onboard/: SKILL.md
.github/workflows/: build_and_test.yml
docs/: tech-stack.md
docs/autodocs/: README.md
docs/know-how/: README.md  aax-plugin-support.md  juce-plugin-architecture.md  pamplejuce-build-system.md  windows-toolchain-path.md
